# AUTO-MIXER-Tubeslave

./: .cursorrules  .env.example  .gitignore  .gitmodules  AGENTS.md  BUILD.md  CLAUDE.md  DEBUG_VOICE_CONTROL.md  INSTALL.md  README.md  START_VOICE_CONTROL.md  ai.openclaw.gateway.plist  build.sh  build_backend.sh  cleanup_candidates.md  existing_modules_report.md  requirements-ai-decision.txt  requirements.txt  setup_agent_infra.py  start-backend.sh  start-frontend.sh  start.py  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  start_soundcheck.py  start_with_virtual_mixer.sh  test_results.json
.ai/: README.md
.cursor/: settings.json
Docs/: ABLETON_OSC_SETUP.md  AGENT_TRAINING_DATA.md  AI_DECISION_CORRECTION_LAYER.md  AI_MIXING_OFFLINE_TEST_CHAIN.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  ARCHITECTURE_V2_AUDIT.md  AUTO_EQ_INTEGRATION.md  BLEED_DETECTION_FRAMEWORK.md  CLEANUP_CANDIDATES_DECISION_LAYER.md  CODE_REVIEW.md  CONVENTIONS.md  DECISION_CORRECTION_LAYER_AUDIT.md  DECISION_ENGINE.md  GAIN_STAGING_GUIDE_RU.md  HEALTH_BASELINE_20260518.md  IMPROVEMENT_PLAN.md  INDEX.md  IPHONE_REMOTE.md  MIXING_STATION_INTEGRATION.md  OFFLINE_EXPERIMENTS.md  PAPERCLIP_DIRECTOR_WORKFLOW.md  PHASE1_GENERATED_CLEANUP_PREVIEW.md  PROJECT_CLEANUP_BACKLOG.md  PROJECT_IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE_MAP.md  QUARANTINE_DECISIONS_20260518.md  SAFETY_GATE.md  SONG_REPA_ACCEPTED_FX15_AIR_MINUS_0_80_PIPELINE.md  STAGE1_COMPLETE.md  STAGING_BOUNDARIES_20260518.md  STRUCTURING_COMPLETION_20260518.md  TECHNICAL.md  TOOLS.md  agent_responsibilities.md  authoritative_mixing_research_2026-04-26.md  autofoh_gap_analysis.md  perceptual_evaluation.md  project_structure_index.json  source_grounded_learning.md  (+3 more)
ai_mixing_pipeline/: __init__.py  audio_utils.py  config.py  models.py
archive/: README.md
automixer/: __init__.py  config.py
backend/: CHANNEL_INSERTS_README.md  DANTE_ROUTING_README.md  GAIN_STAGING_DANTE_TEST.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_VOICE.md  TUB-323-Deployment-Write-Boundary-Map.md  VOICE_CONTROL_README.md  __init__.py  ableton_client.py  analyze_test_results.py  audio_capture.py  audio_device_scanner.py  audio_devices.py  auth.py  auto_compressor.py  auto_compressor_cf.py  auto_effects.py  auto_eq.py  auto_eq_processing.py  auto_fader.py  auto_fader_hybrid.py  auto_fx.py  auto_gate_caig.py  auto_mastering.py  auto_panner.py  auto_panner_adaptive.py  auto_phase_gcc_phat.py  auto_reverb.py  auto_soundcheck_engine.py  auto_test_routing.py  autofoh_analysis.py  autofoh_detectors.py  autofoh_evaluation.py  autofoh_logging.py  autofoh_models.py  autofoh_profiles.py  autofoh_runtime.py  autofoh_safety.py  backend.spec  (+113 more)
backend/native/: CMakeLists.txt
backend/native/src/audio/: coreaudio_capture.cpp  coreaudio_capture.h
config/: README.md  automixer.yaml  default_config.json  ewma_metrics.yaml  mixing_station.yaml  muq_director_test.yaml  muq_eval.yaml  muq_eval_song_repa_offline.yaml  perceptual.yaml  source_knowledge.yaml  training_manifest.example.json
configs/: ai_decision_layer.yaml  ai_mixing_roles.yaml  spectral_ceiling_profiles.yaml
docs/: ARCHITECTURE.md  CONVENTIONS.md  PLAN_AGENTS_SOUNDCHECK_LIVE.md  TOOLS.md  architecture.md  cleanup_inventory.md  decision_engine.md  live_pipeline.md  offline_pipeline.md  osc_mapping_wing.md  project_structure_v2_report.md  safety_model.md  stem_offline_ci_test_run.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
mix_agent/: README.md  __init__.py  __main__.py  backend_bridge.py  models.py  stem_training_loop.py
models/: channel_classifier_force.pt  gain_pan_predictor_real2.pt  mix_console_real2.pt  tmp_training_state_force_real.json  tmp_training_state_force_real2.json  training_state.json  training_state_force.json  training_state_run2.json
presets/: .gitkeep
prompts/: architect.md  evaluator.md  trainer.md
scripts/: ableton_param_discovery.py  ai_council.sh  calibrate_ableton_track_delay.py  create_audio_manifest.py  discover_mixing_station_paths.py  discover_training_datasets.py  download_cambridge_mt.py  download_hf_datasets.py  download_hf_direct.py  download_musdb.py  extract_papers_to_rag.py  full_mix_stems.py  install_ai_decision_layer.sh  knowledge_only_mix.py  level_balance_stems.py  mix_desktop_stems.py  mixing_station_emergency_stop.py  pro_studio_mix.py  process_rag_text.py  replay_automix_log_to_mixing_station.py  run_agents.py  run_live_mix.py  run_training_pipeline.py  send_test_corrections_to_mixing_station.py  spectral_hierarchy_mix.py  start_wing_mixing_agent.py  tail_automixer_eq_logs.sh  test_mixing_station_connection.py  train.py  wing_agent_monitor.py  wing_foh_offline_mix.py
sessions/: Config Set_1776412046.json  Config Set_1776412062.json  Config Set_1776412064.json  Config Set_1776412076.json  Config Set_1776412307.json  Config Set_1776412505.json  Config Set_1776412529.json  Config Set_1776412718.json  Config Set_1776412886.json  Config Set_1776413286.json  Config Set_1776413397.json  Config Set_1776413658.json  Config Set_1776413863.json  Config Set_1776413981.json  Config Set_1776414109.json  Config Set_1776414267.json  Config Set_1776414461.json  Config Set_1776414522.json  Config Set_1776414737.json  Config Set_1776414901.json  Config Set_1776414961.json  Config Set_1776415152.json  Config Set_1776415711.json  Config Set_1776433803.json  Config Set_1776450183.json  Config Set_1776452911.json  Config Set_1776455290.json  Config Set_1776455337.json  Config Set_1776455834.json  Config Set_1776459110.json  Config Set_1776799033.json  Config Set_1776800692.json  Config Set_1776836922.json  Config Set_1776837993.json  Config Set_1776839691.json  Config Set_1776840202.json  Config Set_1776840787.json  Config Set_1776842738.json  Config Set_1776843913.json  Config Set_1776844608.json  (+440 more)
src/: __init__.py
tests/: conftest.py  test_ableton_eq_eight_parse.py  test_ableton_eq_readback_decode.py  test_ableton_reset_eq_gains.py  test_ableton_send_eq_shim.py  test_action_schema.py  test_adapter_dry_run.py  test_agent_handlers.py  (+88 more)
(+941 files in other folders)
